[tool.poetry]
name = "wave-reader"
version = "2.0.1"
description = "Unofficial package for Airthings Wave communication."
authors = ["Zackary Troop"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ztroop/wave-reader-utils"
packages = [{include = "wave_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
Authlib = "^1.7.2"
bleak = "^3.0.2"
httpx = "^0.28.1"
attrs = "^26.1.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
flake8 = "^7.3.0"
mypy = "^2.1.0"
isort = "^8.0.1"
black = "^26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["wave_reader"]
line_length = 79
multi_line_output = 5
not_skip = "__init__.py"

[tool.coverage.run]
relative_files = true

[tool.mypy]
ignore_missing_imports = true
